--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=Laojiou1204_sonarcloud-test-project
 sonar.organization=laojiou1204
-
+sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonarcloud-test-project
